samples/_failures_safe/1761408502_623396_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f9fafed.c: In function ‘main’:
./samples/SAFE/__tmp_8f9fafed.c:150:16: error: missing terminating " character
  150 |         printf("4. Transpose
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_8f9fafed.c:150:9: error: expected expression at end of input
  150 |         printf("4. Transpose
      |         ^~~~~~
./samples/SAFE/__tmp_8f9fafed.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8f9fafed.c:150:9: error: expected declaration or statement at end of input
